--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.15.4",
     "express-static-gzip": "^1.1.3",
     "faker": "^4.1.0",
+    "file-system": "^2.2.2",
     "jest": "^23.6.0",
     "moment": "^2.22.2",
     "mysql": "^2.14.1",
