--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "react": "webpack -d --watch",
-    "seed": "node database/seed.js",
+    "seed": "node database/NEWseed.js",
     "test": "jest --coverage"
   },
   "babel": {
@@ -43,6 +43,7 @@
     "moment": "^2.22.2",
     "mysql": "^2.14.1",
     "mysql2": "^1.6.1",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
