Made tweaks to Postgres config, added indexes to schema

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "nodemon server/index.js",
     "react": "webpack -d --watch",
     "seed": "node database/NEWseed.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "connect": "psql postgres postgres"
   },
   "babel": {
     "presets": [
