--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "moment": "^2.22.2",
     "mysql": "^2.14.1",
     "mysql2": "^1.6.1",
+    "newrelic": "^4.11.0",
     "path": "^0.12.7",
     "pg": "^7.6.1",
+    "pg-promise": "^8.5.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
