--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "acorn": "^6.0.2",
     "body-parser": "^1.17.2",
     "brotli-webpack-plugin": "^1.0.0",
+    "cluster": "^0.7.7",
+    "compression": "^1.7.3",
     "compression-webpack-plugin": "^2.0.0",
-    "express": "^4.15.4",
+    "express": "^4.16.4",
     "express-static-gzip": "^1.1.3",
     "faker": "^4.1.0",
     "file-system": "^2.2.2",
@@ -45,6 +47,7 @@
     "mysql": "^2.14.1",
     "mysql2": "^1.6.1",
     "newrelic": "^4.11.0",
+    "os": "^0.1.1",
     "path": "^0.12.7",
     "pg": "^7.6.1",
     "pg-promise": "^8.5.2",
